# sanya_eco_monitor

./: .gitignore  README.md  data_and_ui_plan.md  docker-compose.yml  real_device_api_schema.md  start_backend.sh  start_frontend.sh
backend/: .dockerignore  .env.example  Dockerfile  auth.py  backfill.py  backfill_full.py  check_codes.py  check_db.py  config.py  database.py  debug_collect.py  fetch_schema.py  inspect_time.py  logging_setup.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py  schema_test.json  schema_test.xml  schema_test_full.json  time_utils.py  tmp_auth_cookie.txt  tmp_login.json  tmp_paging_test.docx  tmp_report_encoding_check.docx  tmp_report_with_stats.docx
backend/collectors/: base.py  insect.py  runoff.py  sensor.py  water_quality.py  whxph.py
backend/routers/: analysis.py  auth.py  insect.py  report.py  sensor.py  summary.py
backend/scripts/: regenerate_reports.py  seed_data.py
backend/services/: ai_report.py  analysis_dashboard.py  chart_service.py  docx_service.py  gemini_image_service.py  guideline_metrics.py  report_figures.py  report_service.py  warning_rules.py  water_quality_support.py  weather_support.py
backend/tests/: test_ai_report_format.py  test_analysis_dashboard_cache.py  test_history_comparison_outputs.py  test_insect_heatmap.py  test_weather_support_resilience.py
docs/: server-persistent-run.md  技术方案手册.md  指南实施升级方案.md  指南指标可做性对比表.md  设备分类接口清单.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  (+3 more)
(+462 files in other folders)
