[project]
name = "sanya-eco-monitor-backend"
version = "1.0.0"
description = "Sanya eco monitor backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy==2.0.35",
    "aiosqlite==0.20.0",
    "httpx==0.27.2",
    "apscheduler==3.10.4",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.12",
    "pandas==2.2.3",
    "jinja2==3.1.4",
    "openpyxl==3.1.5",
    "matplotlib==3.9.4",
    "pymupdf>=1.27.2.2",
]

[tool.uv]
# uv uses .venv in the project root by default.
